--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container background-gradient-1">
   <h1>Let's get after it!</h1>
-  <button class="btn btn-vapor-success" routerLink="create">Create a Hunt</button>
+  <button class="btn btn-vapor-success" routerLink="create" routerLinkActive="active">Create a Hunt</button>
   <div class="col-4">
     <div class="card" *ngFor="let hunt of displayedHunts">
     <p>{{ hunt.name }}</p>
