--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,23 +4,31 @@
     <button class="btn btn-vapor-success" routerLink="auth">Log In</button>
   </div>
   <div class="card">
-      <img href="">
-       <!-- Screenshot of app functionality -->
+    <figure>
+      <img src="assets/img/Createhunt.png" height="auto" width="80%" />
+      <figcaption> Create Hunts for your friends!</figcaption>
+    </figure>
   </div>
   <div class="card">
-  <p>Find Landmarks in your local parks!</p>
-      <img href="">
-       <!-- Screenshot of app functionality -->
+    <figure>
+      <img src="" height="auto" width="80%" />
+      <figcaption> Mark off items when they are found!</figcaption>
+    </figure>
   </div>
   <div class="card">
-  <p>Easy to use and fun for all ages</p>
-      <img href="">
-      <!-- Screenshot of app functionality -->
+    <figure>
+      <img src="" height="auto" width="80%" />
+      <figcaption> </figcaption>
+    </figure>
+
   </div>
   <div class="card">
+    <figure>
+      <img src="" height="auto" width="80%" />
+      <figcaption></figcaption>
+    </figure>
       <p>Great for school, corporate, or marketing events!</p>
-      <img href="">
-      <!-- Screenshot of app functionality -->
+      <p>Easy to use and fun for all ages</p>
   </div>
 <br>
 </div>
