Add a Back Button to CreateHunt
A back button that works on Create Hunt. Adds .btn-vapor-cancel to css

--- a/src/app/create-hunts/create-hunts.component.html
+++ b/src/app/create-hunts/create-hunts.component.html
@@ -12,5 +12,8 @@
         </div>
       </ng-container>
       <router-outlet></router-outlet>
+      <div style="margin-right:auto">
+      <button type="button" class="btn btn-vapor-cancel" (click)="onCancel()">Go Back</button>
+    </div>
   </div>
 </div>
