--- a/src/styles.css
+++ b/src/styles.css
@@ -94,6 +94,22 @@ a {
   /* Dark purple text on hover */
 }
 
+.btn-vapor-cancel {
+  background-color: #ffcc99;
+  /* Peach/light orange background */
+  border-color: #ffcc99;
+  color: #993300;
+  /* Dark orange text */
+}
+
+.btn-vapor-cancel:hover {
+  background-color: #ffdcb3;
+  /* Lighter peach on hover */
+  border-color: #ffdcb3;
+  color: #993300;
+  /* Dark orange text on hover */
+}
+
 /* Card Styles */
 .card {
   margin: 1em;
