--- a/src/app/create-hunts/create-hunts.component.html
+++ b/src/app/create-hunts/create-hunts.component.html
@@ -13,7 +13,7 @@
       </ng-container>
       <router-outlet></router-outlet>
       <div style="margin-right:auto">
-      <button type="button" class="btn btn-vapor-cancel" (click)="onCancel()">Go Back</button>
+      <button type="button" class="btn btn-vapor-cancel" (click)="onCancel()">Back to Browse</button>
     </div>
   </div>
 </div>
