--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,6 +1,9 @@
 <div class="container background-gradient-1">
   <div class="card">
     <h1>Let's Get Moving!</h1>
+
+    <p>Great for school, corporate, or marketing events!</p>
+    <p>Easy to use and fun for all ages</p>
     <button class="btn btn-vapor-success" routerLink="auth">Log In</button>
   </div>
   <div class="card">
@@ -11,24 +14,22 @@
   </div>
   <div class="card">
     <figure>
-      <img src="" height="auto" width="80%" />
-      <figcaption> Mark off items when they are found!</figcaption>
+      <img src="assets/img/BrowseHunts.png" height="auto" width="80%" />
+      <figcaption>Browse Hunts Created by Others!</figcaption>
     </figure>
   </div>
   <div class="card">
     <figure>
-      <img src="" height="auto" width="80%" />
-      <figcaption> </figcaption>
+      <img src="assets/img/myHunts.png" height="auto" width="60%" />
+      <figcaption> Mark off items when they are found! </figcaption>
     </figure>
 
   </div>
   <div class="card">
     <figure>
-      <img src="" height="auto" width="80%" />
-      <figcaption></figcaption>
+      <img src="assets/img/TrophyCase.png" height="auto" width="80%" />
+      <figcaption>Reminisce about all the fun you had!</figcaption>
     </figure>
-      <p>Great for school, corporate, or marketing events!</p>
-      <p>Easy to use and fun for all ages</p>
   </div>
 <br>
 </div>
