--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,8 @@
 <div class="container " >
   <div class="card" style="align-items:center;">
-
+    <div class="alert alert-danger" *ngIf="error">
+      <p>{{ error }}</p>
+    </div>
   <h1>Welcome Back!</h1>
   <p>Lets find-it!</p>
   <form
