--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand" routerLink="home" *ngIf="isAuthenticated">FindIt!</a>
+  <a class="navbar-brand" routerLink="myHunts" *ngIf="isAuthenticated">FindIt!</a>
   <a class="navbar-brand" routerLink="" *ngIf="!isAuthenticated">FindIt!</a>
 
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -8,8 +8,8 @@
       class="nav-item nav-link"
       routerLink="browse"
        routerLinkActive="active">Browse Hunts</a>
-      <!-- <a class="nav-item nav-link" routerLink="create" routerLinkActive="active"
-      *ngIf="isAuthenticated">Create a Hunt</a> -->
+      <a class="nav-item nav-link" routerLink="create" routerLinkActive="active"
+      *ngIf="isAuthenticated">Create a Hunt</a>
     </div>
     <div class="navbar-nav ml-auto">
       <a class="nav-item nav-link" routerLink="auth" routerLinkActive="active"
