--- a/src/app/create-hunts/create-hunts.component.html
+++ b/src/app/create-hunts/create-hunts.component.html
@@ -7,7 +7,7 @@
             <button type="button" class="btn btn-vapor-success" style="margin-right: 1em;"
               (click)="onBasic()">None</button>
             <button type="button" class="btn btn-vapor-warn" style="margin-right: 1em;"
-              (click)="onBasic()">GeoPoint</button>
+              (click)="onBasic()" disabled>GeoPoint</button>
           </div>
         </div>
       </ng-container>
